[package]
name = "legalis-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "LLM integration layer for Legalis-RS"
repository = "https://github.com/cool-japan/legalis"
homepage = "https://github.com/cool-japan/legalis"
documentation = "https://docs.rs/legalis-llm"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
bytes = "1.11"
rand = "0.9.2"
regex = "1.12"
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"
uuid = { version = "1.19", features = ["v4"] }
lru = "0.16"
