[package]
name = "legalis-lod"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Linked Open Data (RDF/TTL) export for Legalis-RS"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
rand = "0.9"
ordered-float = "4.6"
