[package]
name = "legalis-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Statute registry and version management for Legalis-RS"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
indexmap.workspace = true
lru = "0.12"
fuzzy-matcher = "0.3"
tokio = { version = "1.42", features = ["sync", "macros", "rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
quick-xml = { version = "0.36", features = ["serialize"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "uuid", "json"], optional = true }
async-graphql = { version = "7.0.17", optional = true }
async-graphql-axum = { version = "7.0.17", optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = []
async = ["tokio", "futures", "async-stream", "async-trait"]
akoma-ntoso = ["quick-xml"]
sqlite = ["sqlx", "async", "tokio/rt-multi-thread", "async-trait"]
postgres = ["sqlx", "async", "tokio/rt-multi-thread", "async-trait"]
graphql = ["async-graphql", "async-graphql-axum", "async"]
all-backends = ["sqlite", "postgres"]

[dev-dependencies]
criterion = "0.5"
