[package]
name = "legalis-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Simulation engine for Legalis-RS"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }

[[bench]]
name = "simulation"
harness = false
