[package]
name = "legalis-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Formal verification for Legalis-RS legal statutes"
repository = "https://github.com/cool-japan/legalis"
homepage = "https://github.com/cool-japan/legalis"
documentation = "https://docs.rs/legalis-verifier"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
z3 = { version = "0.12", optional = true }
anyhow.workspace = true
chrono.workspace = true
rayon = { version = "1.11", optional = true }
printpdf = { workspace = true, optional = true }
notify = { version = "8.2", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
rand = "0.9.2"
md5 = "0.8"
uuid = { version = "1.19", features = ["v4"] }

[dev-dependencies]
criterion = "0.8"

[features]
default = []
z3-solver = ["z3"]
parallel = ["rayon"]
pdf = ["printpdf"]
watch = ["notify", "crossbeam-channel"]

[[bench]]
name = "verifier_benchmarks"
harness = false
