[package]
name = "legalis-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Formal verification for Legalis-RS legal statutes"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/legalis-verifier"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
rayon = { workspace = true, optional = true }
printpdf = { workspace = true, optional = true }
notify = { version = "8.2", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
rand.workspace = true
md5 = "0.8"
uuid.workspace = true

# SMT Solver (OxiZ - Pure Rust Z3 alternative)
oxiz-solver = { workspace = true, optional = true }
oxiz-core = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
default = []
smt-solver = ["oxiz-solver", "oxiz-core", "num-bigint"]
parallel = ["rayon"]
pdf = ["printpdf"]
watch = ["notify", "crossbeam-channel"]

[[bench]]
name = "verifier_benchmarks"
harness = false
