[package]
name = "legalis-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Visualization engine for legal statutes - decision trees, flowcharts, and dependency graphs"

[dependencies]
legalis-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
petgraph.workspace = true
