[package]
name = "jp-constitution-3d"
version = "0.1.0"
edition = "2024"
publish = false
description = "3D visualization of the Japanese Constitution structure"

[dependencies]
legalis-core = { path = "../../crates/legalis-core" }
legalis-jp = { path = "../../jurisdictions/jp" }
legalis-viz = { path = "../../crates/legalis-viz" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
