[package]
name = "legal-dsl-interop"
version = "0.1.0"
edition = "2021"
description = "Example: Legal DSL interoperability - Catala, L4, Stipula conversion"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
legalis-core = { path = "../../crates/legalis-core" }
legalis-interop = { path = "../../crates/legalis-interop" }

tokio = { version = "1", features = ["full"] }
