[package]
name = "legal-knowledge-graph"
version = "0.1.0"
edition = "2021"
description = "Example: Exporting statutes to Linked Open Data (RDF/TTL, JSON-LD, SPARQL)"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
legalis-core = { path = "../../crates/legalis-core" }
legalis-lod = { path = "../../crates/legalis-lod" }

tokio = { version = "1", features = ["full"] }
