[package]
name = "llm-hallucination-firewall"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
legalis-core = { path = "../../crates/legalis-core" }
legalis-registry = { path = "../../crates/legalis-registry" }
legalis-verifier = { path = "../../crates/legalis-verifier" }
legalis-jp = { path = "../../jurisdictions/jp" }
regex = "1.12"
anyhow = "1.0"
serde_json = "1.0"
